gccida/g2/expand_builtin_init_dwarf_reg_sizes
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_init_dwarf_reg_sizes/src/dwarf2out.c:912:31: error: use of undeclared identifier 'machine_mode'
v10 = adjust_address_1( v5, ( machine_mode)v4, v8, 1, 1); 
                              ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_init_dwarf_reg_sizes/src/obj/dwarf2out.o] Error 1
